Fixed bug where layout breaks when a completed action list row is struck-through.

--- a/orgwolf/static/orgwolf/orgwolf.less
+++ b/orgwolf/static/orgwolf/orgwolf.less
@@ -810,15 +810,14 @@ input,textarea {
 	    background-color: @state-danger-bg;
 	}
     }
-    .completed div{
-	position: relative;
+    .completed div {
 	&::after {
 	    border-bottom: 2px solid;
 	    content: "";
 	    left: 0;
 	    position: absolute;
 	    right: 0;
-	    top: 45%;
+	    top: 0.6em;
 	}
     }
     #scheduled-list {
